@@ -46,6 +46,10 @@ Beautiful Soup, by contrast, only changes the source when absolutely needed to m
         - img class="dropcap" are not changed to spans
         - any of the above that prove to be needed can be added back as needed
         - all html4 -> html5 changes are made, no matter the source.
+    - it turns out that producers used workarounds to adjust for all the changes in support of limited-capability ereaders. For example, drop-caps in the HTML versions used @media(handheld) and `x-ebookmaker` css rules to remove drop-caps that didn't work in EPUB. Now that we are no longer removing floats and the like, we needed to undo most of these accommodations for EPUB3. @media(handheld) are now removed for EPUB3, and `x-ebookmaker is replaced by `x-ebookmaker-3` for EPUB3 files.
+    - For EPUB3, we still need to remove CSS rules that use the position property. Apple iBooks only allows the position property for fixed-layout EPUBs; for reflowable EPUBS, it appears to remove any elements that use `position: absolute`. It looks like absolute positioning is used mostly for page number anchors in the PG corpus, so we are retaining the behavior of hiding page number anchors when they use absolute positioning. Producers who want visible page number anchors should use floating elements.
+    - For EPUB3, in our initial testing, we found that setting a default body margin hurt more books than it helped, and we are now using different default CSS sheets for EPUB3 and EPUB2.
+    - CSS for the EPUB cover is has been updated to better handle small or oddly sized cover images.
 - Ebookmaker breaks HTML source into chunks to improve performance on EPUB readers. For EPUB3 files, the chunker treats `section` elements the same way it treated `div.section` elements for EPUB2. Similarly section elements in HTML5 source are converted to div.section elements for EPUB2. In addition, the maximum chunk size for EPUB3 is 300KB compared to 100KB for EPUB2.
 - Ebookmaker now supports attribute in the epub namespace {http://www.idpf.org/2007/ops} These can be entered in source file in two ways:
     - any `data-epub-*` attribute in an html or xhtml source file is moved to the epub namespace for EPUB2, stripped for EPUB2, and preserved as-is for HTML5. This option will allow permit validation with the W3C 'nu' validator.
